# ACCS

./: .gitignore  Dockerfile  Presentation.ipynb  README.md  Untitled.ipynb  app.py  pyproject.toml
.ipynb_checkpoints/: Presentation-checkpoint.ipynb  model-checkpoint.ipynb
