[tool.poetry]
name = "accs"
version = "0.1.0"
description = ""
authors = ["Carlos Cerqueira <ce.cesc01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
skops = "^0.9.0"
flask = "^3.0.3"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
